--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Pistole offers a wide range of opportunities</title>
     <meta name="description" content="Slash s."/>
+    <meta property="og:image" content="https://sheeptester.github.io/img/pistole-smaller.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
